# lendoor-stellar

./: .dockerignore  .gitignore  README.md
backend/: README.md  (+8 more)
contratos/: .gitignore  Cargo.toml  DEPLOYMENTS.md  MIGRATION_EVM_TO_SOROBAN.md  PARITY.md
contratos/loan-manager/: Cargo.toml
contratos/loan-manager/src/: lib.rs  test.rs
contratos/loan-manager/test_snapshots/test/: accrual_restarts_from_last_accrued_not_due.1.json  accrue_late_is_permissionless_and_succeeds_without_owner_auth.1.json  accrue_late_materializes_and_is_idempotent.1.json  accrue_late_no_overflow_at_realistic_max.1.json  accrue_late_then_close_requires_materialized_owed.1.json  amount_due_floor_band_for_tiny_principals.1.json  amount_due_is_floor_rounded.1.json  amount_due_no_overflow_at_million_dollar_principal.1.json  attacker_signature_cannot_satisfy_owner_gate_on_set_user_risk.1.json  attacker_signature_cannot_satisfy_vault_gate_on_open_loan.1.json  borrow_over_credit_limit_fails.1.json  cannot_open_while_loan_active.1.json  close_loan_accepts_overpayment.1.json  close_loan_before_min_hold_sets_future_next_borrow.1.json  close_loan_next_borrow_boundary_at_exact_min_hold.1.json  close_loan_requires_vault_auth.1.json  close_loan_underpaid_fails.1.json  cooldown_boundary_is_inclusive_at_next_borrow_time.1.json  cooldown_precedes_offer_check.1.json  credit_limit_expiry_boundary_is_exclusive.1.json  credit_limit_respects_kyc_and_expiry.1.json  custom_min_hold_extends_cooldown.1.json  default_only_after_grace_plus_late_period.1.json  fresh_loan_last_accrued_equals_start.1.json  full_borrow_and_repay_cycle.1.json  get_premium_mirrors_premiums_getter.1.json  get_user_risk_mirrors_users_getter.1.json  grace_period_is_snapshotted_at_open.1.json  (+27 more)
contratos/vault/: Cargo.toml
contratos/vault/src/: lib.rs  test.rs
(+522 files in other folders)
